Mon Nov 15 10:41:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ConditionManager.cpp:
        * connectors/dds4ccm/impl/DataReaderListener_T.cpp:
        * connectors/dds4ccm/impl/DataReaderStateListener_T.cpp:
        * connectors/dds4ccm/impl/PortStatusListener.cpp:
        * connectors/dds4ccm/impl/PublisherListener_T.cpp:
        * connectors/dds4ccm/impl/SubscriberListener.cpp:
        * connectors/dds4ccm/impl/TopicListener.cpp:
        * connectors/dds4ccm/impl/dds4ccm_conf.h:
        * connectors/dds4ccm/impl/ndds/DataWriter_T.h:
          No need to initialize a cstring

Mon Nov 15 08:45:15 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DataReaderListener_T.cpp:
          Use ::DDS::xxx instead of DDS_xxx for the states.

        * connectors/dds4ccm/impl/ndds/DataReader_T.cpp:
          Don't use the convertors when converting states. Just use '='.

Sat Nov 13 14:24:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector_T.h:
        * connectors/dds4ccm/tests/PSAT/DDS_PSAT_Connector_T.h:
          Updated for ccm trait changes

Sat Nov 13 14:04:37 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Event_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_Event_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Get_T.h:
        * connectors/dds4ccm/impl/DDS_Get_T.cpp:
        * connectors/dds4ccm/impl/DDS_Listen_T.h:
        * connectors/dds4ccm/impl/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/DDS_Read_T.h:
        * connectors/dds4ccm/impl/DDS_Read_T.cpp:
        * connectors/dds4ccm/impl/DDS_StateListen_T.h:
        * connectors/dds4ccm/impl/DDS_StateListen_T.cpp:
        * connectors/dds4ccm/impl/DDS_State_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_State_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.h: